--- a/Home.css
+++ b/Home.css
@@ -139,9 +139,9 @@ body {
     padding: 10px 55px;
 }
 
-
 .footerContentContainer{
     display: flex;
+    max-height: 100%;
     width:800px;
     flex-flow: wrap;
     justify-content: space-between;
@@ -154,7 +154,6 @@ body {
     text-decoration: none;
 }
 
-
 .footerContentImage{
     display: flex;
     width:50px;
@@ -166,7 +165,6 @@ body {
     margin-left: 20px;
     word-wrap: anywhere;
 }
-
 
 @media(max-width:1440px){
     .headerTextContainer{
