--- a/Home.css
+++ b/Home.css
@@ -141,7 +141,7 @@ body {
 
 .footerContentContainer{
     display: flex;
-    max-height: 100%;
+    height: 60px;
     width:800px;
     flex-flow: wrap;
     justify-content: space-between;
@@ -201,6 +201,10 @@ body {
     }
 
     .footer{
+        height: 120px;
+    }
+
+    .footerContentContainer{
         height: 120px;
     }
 }
