--- a/Home.css
+++ b/Home.css
@@ -161,10 +161,10 @@ body {
 } 
 
 .footerContentText{
-    display: inline-flex;
     align-self: center;
     margin-left: 20px;
-    word-wrap: anywhere;
+    font-weight: bold;
+    word-break: break-all;
 }
 
 @media(max-width:1440px){
@@ -198,7 +198,7 @@ body {
     }
 
     .footerContentContainer {
-        width: 450px;
+        width: 100%;
     }
 
     .footer{
