--- a/Home.css
+++ b/Home.css
@@ -39,20 +39,25 @@ body {
 .headerNav{
     display: inline-flex;
     position: absolute;
-    top: 0;
-    left:0;
-    z-index:1;
+    top: 15px;
+    left: 30px;
+    z-index: 1;
+    justify-content: space-between;
+    width: 220px; 
+    flex-grow: 1;
 }
 
 .headerNav > a:hover{
-    border-bottom: 4px solid #FF5F58;
+    color:#FF5F58;
+    font-weight: 700;
+    transform: scale(1.15);
 }
 
 .navLink{
+    transition: transform 0.3s ease-in-out, color 0.2s ease-in-out, font-weight 0.2s ease-in-out;
     font-family: 'Archivo', sans-serif;
     letter-spacing: 4px;
     color: #ffffff;
-    margin:15px 20px 0 20px;
     padding-bottom:5px;
     text-decoration: none;
     z-index: 2;
@@ -88,8 +93,6 @@ body {
 .sectionContainer--PinkBG{
     background-color: #FF5F58;
     margin-top:50px;
-    padding-left: 100px;
-    padding-right: 100px;
     flex-direction: column;
     padding:25px 100px;
 }
