Further implemented the time line page

--- a/timeLine.css
+++ b/timeLine.css
@@ -1,26 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Archivo:wght@500&display=swap&family=Archivo+Narrow:wght@400&display=swap');
-.timelineSection{
-    width:50%;
-    border-right: solid 5px #FF5F58;
-    height:300px;
+.timeLineSection{
+    width:100%;
+    display: flex;
+    justify-content: space-between;
 }
 
 .timelineCard{
-    width:80%;
+    width:40%;
     background-color: #FF5F58;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
+    padding: 20px 0px 20px 0px;
 }
 
 .timeLineHeader{
-    display: flex;
     background-color: #031424;
-    color: #FF5F58;
+    width:85%;
     text-align: center;
-    width:80%;
-    padding:20px;
+    padding:20px 0px 20px 0px;
     font-family: 'Archivo', sans-serif;
     color: #FF5F58;
     letter-spacing: 4px;
+    margin: 0;
+}
+.timeLineCardtext{
+    width: 85%;
+}
+
+.timeLineDivider{
+    width:5px;
+    background-color: #FF5F58;
 }
