--- a/timeLine.css
+++ b/timeLine.css
@@ -11,7 +11,7 @@
 }
 
 .timelineSection{
-    padding: 3em 15px 3em 2em;
+    padding: 3em 15px 2em 2em;
     color: white;
     font-family: 'Archivo', sans-serif;
     letter-spacing: 2px;
@@ -73,4 +73,15 @@
 .timelineSection-Description{
     font-size: 16px;
     padding-left: 5%;
+    line-height: 23px;
+    font-family: 'Archivo', sans-serif;
+}
+
+.timelineLink{
+    color: #FF5F58;
+    text-decoration:none;
+}
+
+.timelineLink:hover{
+    text-decoration: underline;
 }
